# polars-slides

./: .gitignore  README.md  pres.ipynb  pyproject.toml
data/: mil.parquet
